--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         for all skill levels.
       </p>
 
-      <button class="accordion--question active">
+      <button class="accordion--question">
         Can I use Frontend Mentor projects in my portfolio?
         <img
           class="icon-plus"
