--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Barbara Chagas</a>.
+      >. Coded by <a href="https://github.com/barbarachagas">Barbara Chagas</a>.
     </div>
   </body>
   <script src="script.js"></script>
